--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,12 @@ name = "shishua"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+panic = "abort"
+lto = true
+opt-level = 3
+debug = 2
+codegen-units = 1
 
 [dependencies]
 rand_core = "0.6"
