--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,13 @@ codegen-units = 1
 
 [dependencies]
 rand_core = "0.6"
-rand = "0.8"
+rand = { version = "0.8", features = ["small_rng"] }
 
 [dev-dependencies]
 num-traits = "0.2"
 dhat = "0.3.2"
+criterion = { version = "0.5", features = ["html_reports"] }
+
+[[bench]]
+name = "rng"
+harness = false
