--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,10 @@ harness = false
 name = "vectorized"
 harness = false
 
+[[bench]]
+name = "xoshiro"
+harness = false
+
 [[bin]]
 name = "dasm"
 path = "src/bin/dasm.rs"
