--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ criterion = { version = "0.5", features = ["html_reports"] }
 criterion-perf-events = "0.4"
 perfcnt = "0.8"
 itertools = "0.11.0"
+rand_xoshiro = "0.6.0"
 
 [lib]
 bench = false
