--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "shishua"
+name = "simd_prng"
 version = "0.1.0"
 edition = "2021"
 
@@ -31,7 +31,7 @@ name = "shishua"
 harness = false
 
 [[bench]]
-name = "vectorized"
+name = "comparison"
 harness = false
 
 [[bench]]
