debugging binaries -> internal examples

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,9 @@ codegen-units = 1
 
 [dependencies]
 rand_core = "0.6"
-rand = { version = "0.8", features = ["small_rng"] }
 
 [dev-dependencies]
+rand = { version = "0.8", features = ["small_rng"] }
 num-traits = "0.2"
 dhat = "0.3.2"
 criterion = { version = "0.5", features = ["html_reports"] }
@@ -38,12 +38,12 @@ harness = false
 name = "xoshiro256plusplus"
 harness = false
 
-[[bin]]
+[[example]]
 name = "dasm"
-path = "src/bin/dasm.rs"
+path = "examples/_internal/dasm.rs"
 bench = false
 
-[[bin]]
+[[example]]
 name = "profile"
-path = "src/bin/profile.rs"
+path = "examples/_internal/profile.rs"
 bench = false
