--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ criterion-perf-events = "0.4"
 perfcnt = "0.8"
 itertools = "0.11.0"
 rand_xoshiro = "0.6.0"
+serial_test = "2.0.0"
 
 [lib]
 bench = false
