--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ perfcnt = "0.8"
 itertools = "0.11.0"
 rand_xoshiro = "0.6.0"
 serial_test = "2.0.0"
+rust_decimal = { version = "1.30.0", features = ["maths"] }
+rust_decimal_macros = "1.30.0"
 
 [lib]
 bench = false
