--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,10 @@ harness = false
 name = "xoshiro256plusplus"
 harness = false
 
+[[bench]]
+name = "scratch"
+harness = false
+
 [[example]]
 name = "dasm"
 path = "examples/_internal/dasm.rs"
