xoshiro reference tests, more refactoring

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "dseight.disasexpl"
+        "dseight.disasexpl",
+        "ms-vscode.cpptools-extension-pack"
     ]
 }
