chore: miri tests for portable

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           toolchain: nightly
           targets: x86_64-unknown-linux-gnu
-          components: rustfmt, clippy
+          components: rustfmt, clippy, miri
 
       - run: cargo fmt --check
 
@@ -38,3 +38,7 @@ jobs:
       - run: cargo build --all-targets --target $TARGET
         env:
           RUSTFLAGS: "-C target-feature=+avx2,+avx512f,+avx512dq,+avx512vl"
+
+      - run: cargo miri test --target $TARGET --lib -- portable
+        env:
+          MIRIFLAGS: "-Zmiri-disable-isolation"
