--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
       - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
         with:
-          toolchain: nightly
+          toolchain: stable
           components: rustfmt
       - run: cargo fmt --check
 
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
       - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
         with:
-          toolchain: nightly
+          toolchain: stable
           targets: x86_64-unknown-linux-gnu
           components: clippy
       - uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
@@ -43,12 +43,18 @@ jobs:
     strategy:
       matrix:
         include:
-          - name: baseline
-            rustflags: ""
-            cargo-args: "--lib"
-          - name: avx2
+          - name: msrv-avx2
+            toolchain: "1.89.0"
             rustflags: "-C target-feature=+avx2"
             cargo-args: ""
+          - name: stable-avx2
+            toolchain: stable
+            rustflags: "-C target-feature=+avx2"
+            cargo-args: ""
+          - name: nightly-portable
+            toolchain: nightly
+            rustflags: ""
+            cargo-args: "--no-default-features --features portable"
     name: test (${{ matrix.name }})
     env:
       CARGO_PROFILE_RELEASE_LTO: "false"
@@ -57,26 +63,36 @@ jobs:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
       - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
         with:
-          toolchain: nightly
+          toolchain: ${{ matrix.toolchain }}
           targets: x86_64-unknown-linux-gnu
       - uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
       - uses: taiki-e/install-action@a362280ea100b5bb920cf9040c038ce9a50c7943 # v2.67.16
         with:
           tool: nextest
-      - run: cargo nextest run --target $TARGET --release ${{ matrix.cargo-args }}
+      - run: cargo +${{ matrix.toolchain }} nextest run --target $TARGET --release ${{ matrix.cargo-args }}
         env:
           RUSTFLAGS: ${{ matrix.rustflags }}
 
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - name: stable-default
+            toolchain: stable
+            cargo-args: ""
+          - name: nightly-all-features
+            toolchain: nightly
+            cargo-args: "--all-features"
+    name: build (${{ matrix.name }})
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
       - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
         with:
-          toolchain: nightly
+          toolchain: ${{ matrix.toolchain }}
           targets: x86_64-unknown-linux-gnu
       - uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
-      - run: cargo build --all-targets --target $TARGET
+      - run: cargo +${{ matrix.toolchain }} build --all-targets ${{ matrix.cargo-args }} --target $TARGET
         env:
           RUSTFLAGS: "-C target-feature=+avx2,+avx512f,+avx512dq,+avx512vl"
 
@@ -90,6 +106,6 @@ jobs:
           targets: x86_64-unknown-linux-gnu
           components: miri
       - uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
-      - run: cargo miri test --target $TARGET --lib -- portable
+      - run: cargo +nightly miri test --target $TARGET --no-default-features --features portable --lib
         env:
           MIRIFLAGS: "-Zmiri-disable-isolation"
