--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -136,6 +136,20 @@ jobs:
         env:
           RUSTFLAGS: "-C target-feature=+avx2"
 
+  doc:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4.3.1
+      - uses: dtolnay/rust-toolchain@f7ccc83f9ed1e5b9c81d8a67d7ad1a747e22a561 # master
+        with:
+          toolchain: nightly
+          targets: x86_64-unknown-linux-gnu
+      - uses: Swatinem/rust-cache@779680da715d629ac1d338a641029a2f4372abb5 # v2.8.2
+      - run: cargo +nightly doc --all-features --no-deps --target $TARGET
+        env:
+          RUSTFLAGS: "-C target-feature=+avx2,+avx512f,+avx512dq,+avx512vl"
+          RUSTDOCFLAGS: "--cfg docsrs -C target-feature=+avx2,+avx512f,+avx512dq,+avx512vl"
+
   test-miri:
     runs-on: ubuntu-latest
     steps:
