--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,20 @@ name = "simd_rand"
 version = "0.1.0"
 edition = "2024"
 rust-version = "1.89"
+license = "MIT"
+description = "SIMD-accelerated random number generators"
+repository = "https://github.com/martinothamar/simd-rand"
+homepage = "https://github.com/martinothamar/simd-rand"
+readme = "README.md"
+keywords = ["simd", "random", "rng", "avx2", "avx512"]
+categories = ["algorithms", "no-std"]
+exclude = ["examples/_internal/", "external/", "benches/", ".github/", ".vscode/", "AGENTS.md", "CLAUDE.md", "Makefile"]
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+# portable feature requires nightly; avx2/avx512 modules need target features
+rustc-args = ["--cfg", "docsrs", "-C", "target-feature=+avx2,+avx512f,+avx512dq,+avx512vl"]
 
 [profile.release]
 panic = "abort"
@@ -31,8 +45,6 @@ cargo = { level = "deny", priority = -1 }
 unreadable_literal = "allow"
 # Critical for SIMD codegen — these functions must be inlined
 inline_always = "allow"
-# Package metadata not needed yet
-cargo_common_metadata = "allow"
 # Seed From impls intentionally panic on invalid input
 fallible_impl_from = "allow"
 # SIMD code imports dozens of intrinsics; explicit imports would be unwieldy
@@ -46,6 +58,7 @@ dhat = "0.3.3"
 criterion = { version = "0.8", features = ["html_reports"] }
 itertools = "0.14.0"
 rand_xoshiro = "0.7.0"
+frand = "0.10"
 rust_decimal = { version = "1.40.0", features = ["maths"] }
 rust_decimal_macros = "1.40.0"
 
